--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio Thales</title>
 </head>
 <body>
-    <header id="header">
+    <header id="header">                              <!--Barra de Navegação-->
         <a id="logo" href="#">Thales Fiscus</a>
         <nav id="nav">
           <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu
@@ -16,12 +16,13 @@
           </button>
           <ul id="menu" role="menu">
             <li><a href="#projetos">Projetos</a></li>
-            <li><a href="#sobre">Sobre Mim</a></li>    
-            <li><a href="#">Contato</a></li>
+            <li><a href="#sobre">Sobre Mim</a></li>
+            <li><a href="#habilidades">Habilidades</a></li>    
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </nav>
       </header>
-
+                                              <!--Capa Incial-->
     <main>
         <div class="perfil">
             <div class="perfilPhoto">
@@ -35,12 +36,12 @@
                 <li><a href="https://www.instagram.com/thales_fiscus/" target="_blank"><img src="assets/Icons/instagram-brands.svg" alt="Instagram"></a></li>
             </ul>
         </div>
-
+                                        <!--PROJETOS-->
         <div id="projetos">
             <h1>PROJETOS</h1>
             <div id="demo">
 
-            <div class="container">                
+            <div class="container">            <!--Music-->
                 <p class="image"><img src="assets/Projetos/Music.png" alt="MusicLibrary"></p>        
                 <p>Este é um projeto proposto pelo site DevChallengeBR, criado por Emmanuel Messias. Este desafio consiste na construção de uma
                     paginda de musicas no "estilo spotify".
@@ -57,7 +58,7 @@
                 </div> 
             </div>
 
-            <div class="container">
+            <div class="container">                 <!--Conversor-->
                 <p class="image"><img src="assets/Projetos/Conversor.png" alt="Conversor"></p>
                 <p>Projeto com o intuito de praticar habilidades em React. Conversor de moedas (real,dolar americano,euro,libra e bitcoin)
                     com tabela de conversões para análise e contexto da moeda selecionada.
@@ -76,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container">            <!--Pousada-->
                 <p class="image"><img src="assets/Projetos/Pousada.png" alt="Pousada"></p>
                 <p>Pagina de reserva de hotel inspirado em exercicio da plataforma DevMedia</p>
                 <span>Tecnologias usadas:</span>
@@ -91,7 +92,7 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container">             <!--Calculadora-->
                 <p class="image"><img src="assets/Projetos/Calculadora.png" alt="Calculadora"></p>                
                 <p>Calculadora totalmente funcional, realizando operações de adição, subtração, divisão e multiplicação. </p>
                 <span>Tecnologias usadas:</span>
@@ -107,7 +108,7 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container">                 <!--Nubank-->
                 <p class="image"><img src="assets/Projetos/Nubank.png" alt="Nubank"></p>                
                 <p>Pagina de login de usuário inspirado na Nubank</p>
                 <span>Tecnologias usadas:</span>
@@ -122,7 +123,7 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container">             <!--Colunas-->
                 <p class="image"><img src="assets/Projetos/Colunas.png" alt="Colunas"></p>                
                 <p>Projeto proposto pelo site Front-End Mentor, onde o objetivo seria a prática da responsividade,
                     criando uma pagina com 3 colunas, sendo elas feitas com display flex, e sendo toltamente responsiva.
@@ -140,17 +141,51 @@
             </div>
             
         </div>
-        
+                                        <!--Sobre Mim-->
         <div id="sobre">
             <h1>SOBRE MIM</h1>
-            <p>A</p>
-
-
-
-
+            <p>Olá, meu nome é Thales, sou estudante de Análise e Desenvolvimento de Sistemas e atualmente estou no 4º período. Focado em 
+                desenvolvimento Front-End, venho buscando aprimorar minhas habilidades através de experiências e oportunidades de negócio. No
+                momento buscando por uma vaga no mercado.
+            </p>
         </div>
 
+        <div id="habilidades">          <!--HABILIDADES-->
+            <h1>HABILIDADES</h1>
+            <div class="skills">
+                <div class="Hcontainer">
+                    <h2>Tenho conhecimentos em:</h2>
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>JavaScript</li>
+                        <li>Banco de Dados MySql</li>
+                        <li>C</li>
+                    </ul>
+                </div>
+                <div class="Hcontainer">
+                    <h2>Com um pouco de ajuda consigo trabalhar com:</h2>
+                    <ul>
+                        <li>React</li>
+                        <li>Bootstrap</li>
+                        <li>PHP</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div id="contato">             <!--CONTATO-->
+            <h1>DISPONÍVEL PARA OPORTUNIDADES</h1>
+            <a href="mailto:thalesgabriel07@gmail.com">Thalesgabriel07@gmail.com</a>
+            <a href="https://www.linkedin.com/in/thalesf01/" target="_blank">Linkedin</a>        
+        </div>
     </main>
+
+    <footer>
+        <div class="copyright">
+            <p>Copyright 2021 <img src="assets/Icons/copyright-1345865_960_720.png" alt="Copyright"></p>
+        </div>
+    </footer>
 
     <script src="js.js"></script>
 </body>
