--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
-                        <li>Não responsivo</li>
+                        <li>Responsivo</li>
                     </ul>
                     <div class="view">
                         <a href="https://music-library-gray.vercel.app/" target="_blank">Ver Projeto</a>
@@ -84,7 +84,7 @@
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>   
-                        <li>Não responsivo</li>                 
+                        <li>Responsivo</li>                 
                     </ul>
                     <div class="view">
                         <a href="https://pousada-teste.vercel.app/" target="_blank">Ver Projeto</a>
