--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
         <div id="projetos">                 <!--PROJETOS-->
             <h1 class="titulo azul">PROJETOS</h1>
             <div id="demo">
+                <div class="container">            <!--Blog-->
+                    <p class="image"><img src="assets/Projetos/Blog.png" alt="Blog"></p>        
+                    <p>Projeto proposto pelo canal "Victor Lima - Guia do Programador" com o intuito de criar uma blog feito com Node e MongoDB, onde é possível
+                        se cadastrar e efetuar o login, realizar a criação e edição de categorias e publicacões de postagens.
+                    </p>
+                    <span>Tecnologias usadas:</span>
+                    <ul>
+                        <li>Node.js</li>
+                        <li>JavaScript</li>                        
+                        <li>Bootstrap</li>
+                        <li>MongoDB</li>
+                        <li>Responsivo</li>
+                    </ul>
+                    <div class="view">
+                        <a href="https://aqueous-savannah-29695.herokuapp.com/" target="_blank">Ver Projeto</a>
+                        <a href="https://github.com/ThalesF01/Blog-Node" target="_blank">Ver Código</a>
+                    </div> 
+                </div>                
 
                 <div class="container">            <!--Music-->
                     <p class="image"><img src="assets/Projetos/Music.png" alt="MusicLibrary"></p>        
@@ -48,6 +66,7 @@
                     </p>
                     <span>Tecnologias usadas:</span>
                     <ul>
+                        <li>JavaScript</li>
                         <li>HTML5</li>
                         <li>CSS3</li>
                         <li>Responsivo</li>
@@ -82,6 +101,7 @@
                     <p>Pagina de reserva de hotel inspirado em exercicio da plataforma DevMedia.</p>
                     <span>Tecnologias usadas:</span>
                     <ul>
+                        <li>JavaScript</li>
                         <li>HTML5</li>
                         <li>CSS3</li>   
                         <li>Responsivo</li>                 
@@ -158,9 +178,11 @@
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
-                        <li>JavaScript</li>
-                        <li>Banco de Dados MySql</li>
+                        <li>JavaScript</li>                        
                         <li>C</li>
+                        <li>Node.js</li>
+                        <li>MySql</li>
+                        <li>MongoDb</li>
                     </ul>
                 </div>
                 <div class="Hcontainer">
