--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                         <li>Node.js</li>
                         <li>JavaScript</li>                        
                         <li>Bootstrap</li>
-                        <li>MongoDB</li>
-                        <li>Responsivo</li>
+                        <li>MongoDB</li>                        
                     </ul>
                     <div class="view">
                         <a href="https://aqueous-savannah-29695.herokuapp.com/" target="_blank">Ver Projeto</a>
@@ -68,8 +67,7 @@
                     <ul>
                         <li>JavaScript</li>
                         <li>HTML5</li>
-                        <li>CSS3</li>
-                        <li>Responsivo</li>
+                        <li>CSS3</li>                        
                     </ul>
                     <div class="view">
                         <a href="https://music-library-gray.vercel.app/" target="_blank">Ver Projeto</a>
@@ -87,8 +85,7 @@
                         <li>HTML5</li>
                         <li>CSS3</li>
                         <li>JavaScript</li>
-                        <li>React</li>
-                        <li>Responsivo</li>
+                        <li>React</li>                        
                     </ul>
                     <div class="view">
                         <a href="https://conversor-moedas-react.vercel.app/" target="_blank">Ver Projeto</a>
@@ -103,8 +100,7 @@
                     <ul>
                         <li>JavaScript</li>
                         <li>HTML5</li>
-                        <li>CSS3</li>   
-                        <li>Responsivo</li>                 
+                        <li>CSS3</li>                                            
                     </ul>
                     <div class="view">
                         <a href="https://pousada-teste.vercel.app/" target="_blank">Ver Projeto</a>
@@ -119,8 +115,7 @@
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li> 
-                        <li>JavaScript</li>
-                        <li>Responsivo</li>              
+                        <li>JavaScript</li>                                      
                     </ul>
                     <div class="view">
                         <a href="https://thalesf01.github.io/Calculadora/" target="_blank">Ver Projeto</a>
@@ -134,8 +129,7 @@
                     <span>Tecnologias usadas:</span>
                     <ul>
                         <li>HTML5</li>
-                        <li>CSS3</li>   
-                        <li>Responsivo</li>                   
+                        <li>CSS3</li>                                              
                     </ul>
                     <div class="view">
                         <a href="https://pagina-login-nubank.vercel.app/" target="_blank">Ver Projeto</a>
@@ -151,8 +145,7 @@
                     <span>Tecnologias usadas:</span>
                     <ul>
                         <li>HTML5</li>
-                        <li>CSS3</li>        
-                        <li>Responsivo</li>              
+                        <li>CSS3</li>                                              
                     </ul>
                     <div class="view">
                         <a href="https://cards-responsivos-3-column.vercel.app/" target="_blank">Ver Projeto</a>
@@ -172,28 +165,58 @@
 
         <div id="habilidades">          <!--HABILIDADES-->
             <h1 class="titulo azul">HABILIDADES</h1>
-            <div class="skills">
-                <div class="Hcontainer">
-                    <h2>Tenho conhecimentos em:</h2>
-                    <ul>
-                        <li>HTML5</li>
-                        <li>CSS3</li>
-                        <li>JavaScript</li>                        
-                        <li>C</li>
-                        <li>Node.js</li>
-                        <li>MySql</li>
-                        <li>MongoDb</li>
-                    </ul>
+                <div class="containerH">
+
+                    <div class="box">
+                        <h3>HTML5</h3>
+                        <img src="/assets/Skills/HTML5.svg" alt="HTML5">
+                    </div>                
+
+                    <div class="box">
+                        <h3>CSS3</h3>
+                        <img src="/assets/Skills/CSS3.svg" alt="CSS3">
+                    </div>
+
+                    <div class="box">
+                        <h3>JavaScript</h3>
+                        <img src="/assets/Skills/JavaScript.svg" alt="JavaScript">
+                    </div>
+
+                    <div class="box">
+                        <h3>ReactJS</h3>
+                        <img src="/assets/Skills/React.svg" alt="ReactJS">
+                    </div>
+
+                    <div class="box">
+                        <h3>NodeJS</h3>
+                        <img src="/assets/Skills/Node.svg" alt="NodeJS">
+                    </div>
+
+                    <div class="box">
+                        <h3>Bootstrap</h3>
+                        <img src="/assets/Skills/BootStrap.svg" alt="Bootstrap">
+                    </div>
+
+                    <div class="box">
+                        <h3>MySql</h3>
+                        <img src="/assets/Skills/MySql.svg" alt="MySql">
+                    </div>
+
+                    <div class="box">
+                        <h3>MongoDB</h3>
+                        <img src="/assets/Skills/Mongo.svg" alt="MongoDB">
+                    </div>
+
+                    <div class="box">
+                        <h3>PHP</h3>
+                        <img src="/assets/Skills/PHP.svg" alt="PHP">
+                    </div>
+
+                    <div class="box">
+                        <h3>C</h3>
+                        <img src="/assets/Skills/C.svg" alt="C">
+                    </div>
                 </div>
-                <div class="Hcontainer">
-                    <h2>Com um pouco de ajuda consigo trabalhar com:</h2>
-                    <ul>
-                        <li>React</li>
-                        <li>Bootstrap</li>
-                        <li>PHP</li>
-                    </ul>
-                </div>
-            </div>
         </div>
 
         <div id="contato">             <!--CONTATO-->
