--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="assets/Photo1.jpg" alt="Perfil">
             </div>
             <h1>THALES FISCUS</h1>
-            <p>Software Developer - Web Developer</p>
+            <p>Web Developer - Fullstack Developer</p>
             <ul class="SociaisMedia">
                 <li><a href="https://github.com/ThalesF01" target="_blank"><img src="assets/Icons/github-square-brands.svg" alt="Github"></a></li>
                 <li><a href="https://www.linkedin.com/in/thalesf01/" target="_blank"><img src="assets/Icons/linkedin-brands.svg" alt="Linkedin"></a></li>
